# nvitop

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST.in  README.md  displayable.py  install-nvidia-driver.sh  nvhtop.py  nvisel.py  nvitop.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml  questions.yaml
.github/workflows/: build.yaml  constraints.txt  docker.yaml  lint.yaml  publish-nvitop-exporter.yaml
docs/: README.md  requirements.txt
docs/source/: callbacks.rst  conf.py  fix-psutil-docstring.sh  index.rst  select.rst  spelling_wordlist.txt
docs/source/api/: caching.rst  host.rst  libcuda.rst  libcudart.rst  libnvml.rst  utils.rst
docs/source/apis/: callbacks.rst  index.rst
docs/source/apis/core/: collector.rst  device.rst  host.rst  libcuda.rst  libnvml.rst  process.rst  utils.rst
docs/source/core/: collector.rst  device.rst  libcuda.rst  libcudart.rst  process.rst  utils.rst
examples/: README.md
examples/callbacks/: README.md  keras.py  lightning.py  requirements-tensorboard.txt  tensorboard.py
examples/collector-background/: README.md  collector_background.py
examples/collector-csv/: README.md  collector_csv.py  requirements.txt
examples/collector-tensorboard/: README.md  collector_tensorboard.py  requirements.txt
examples/ml-framework-callbacks/: keras.py  lightning.py  requirements-keras.txt  requirements-lightning.txt  tensorboard.py
examples/monitor-colored/: README.md  monitor_colored.py
examples/monitor-minimal/: README.md  monitor_minimal.py
examples/select-devices-api/: README.md  select_devices_api.py
examples/take-snapshots/: README.md  take_snapshots_demo.py
k8s/: README.md  clusterrole.yaml  clusterrolebinding.yaml  daemonset.yaml  kustomization.yaml  namespace.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
nvhtop/: __init__.py  device.py  displayable.py  keybinding.py  keybinding_parser.py  libcurses.py  main.py  monitor.py  mouse.py  mouse_event.py  panel.py  process.py  top.py  utils.py
nvitop/: __init__.py  __main__.py  cli.py  device.py  displayable.py  gpu-stats.py  history.py  host.py  keybinding.py  libcurses.py  main.py  mouse.py  panel.py  process.py  select.py  top.py  utils.py  version.py
nvitop-exporter/: Dockerfile  KUBERNETES.md  LICENSE  README.md  dashboard.json  pyproject.toml  requirements.txt  setup.py  test_k8s.py
nvitop-exporter/grafana/: Dockerfile  README.md  dashboard.json  dashboard.yml  datasource.yml  docker-compose.yml  prometheus.yml
nvitop-exporter/nvitop_exporter/: __init__.py  __main__.py  cli.py  exporter.py  k8s.py  utils.py  version.py
nvitop-grafana/: README.md  dashboard-conf.yml  datasource-conf.yml  docker-compose.yml  prometheus-conf.yml
nvitop-grafana/dashboards/: dashboard.json
nvitop/api/: LICENSE  __init__.py  caching.py  collector.py  device.py  host.py  kubernetes.py  libcuda.py  libcudart.py  libgddr6.py  libmxsmi.py  libnvml.py  process.py  termcolor.py  utils.py
nvitop/api/rocm/: rocm_smi.py  rsmiBindings.py
nvitop/callbacks/: LICENSE  __init__.py  keras.py  lightning.py  pytorch_lightning.py  tensorboard.py  utils.py
nvitop/core/: LICENSE  __init__.py  collector.py  device.py  host.py  libcuda.py  libcudart.py  libnvml.py  process.py  utils.py
nvitop/gui/: __init__.py  top.py  ui.py  utils.py
nvitop/gui/lib/: __init__.py  displayable.py  history.py  keybinding.py  libcurses.py  mouse.py
nvitop/gui/panels/: __init__.py  device.py  environ.py  help.py  host.py  process.py  treeview.py
nvitop/gui/screens/: __init__.py  environ.py  help.py  metrics.py  treeview.py
nvitop/gui/screens/main/: __init__.py  device.py  host.py  process.py  utils.py
nvitop/panels/: device.py  process.py
nvitop/tui/: __init__.py  tui.py
nvitop/tui/screens/: __init__.py  base.py  environ.py  help.py  metrics.py  treeview.py
nvitop/tui/screens/main/: __init__.py  device.py  host.py  process.py
nvitop/tui/screens/main/panels/: __init__.py  base.py  device.py  host.py  process.py
nvitop/ui/: __init__.py  displayable.py  history.py  keybinding.py  libcurses.py  mouse.py  top.py  utils.py
nvitop/ui/panels/: __init__.py  device.py  host.py  process.py
systemd/: README.md  build.sh  install.sh  nvitop-exporter.service  systemd_service.md  uninstall.sh
tests/: __init__.py  test_readonly.py
