[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nvitop"
description = "An interactive NVIDIA-GPU process viewer and beyond, the one-stop solution for GPU process management."
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Xuehai Pan", email = "XuehaiPan@pku.edu.cn" }]
license = { text = "Apache License, Version 2.0 (Apache-2.0) & GNU General Public License, Version 3 (GPL-3.0)" }
keywords = [
    "nvidia",
    "nvidia-smi",
    "NVIDIA",
    "NVML",
    "CUDA",
    "GPU",
    "top",
    "monitoring",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    # Sync with nvitop/version.py and requirements.txt
    "nvidia-ml-py >= 11.450.51, < 12.561.0a0",
    "psutil >= 5.6.6",
    "cachetools >= 1.0.1",
    "termcolor >= 1.0.0",
    "colorama >= 0.4.0; platform_system == 'Windows'",
    "windows-curses >= 2.2.0; platform_system == 'Windows'",
]
dynamic = ["version", "optional-dependencies"]

[project.scripts]
nvitop = "nvitop.cli:main"
nvisel = "nvitop.select:main"

[project.urls]
Homepage = "https://github.com/XuehaiPan/nvitop"
Repository = "https://github.com/XuehaiPan/nvitop"
Documentation = "https://nvitop.readthedocs.io"
"Bug Report" = "https://github.com/XuehaiPan/nvitop/issues"

[tool.setuptools.packages.find]
include = ["nvitop", "nvitop.*"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py37"]

[tool.mypy]
# Sync with requires-python
python_version = "3.8"  # appease mypy for syntax errors in numpy stubs
mypy_path = [".", "nvitop-exporter"]
exclude = ["nvitop-exporter/setup.py"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ['nvitop.callbacks.*', 'nvitop.gui.*']
ignore_errors = true

[tool.pylint]
main.py-version = "3.7"
basic.good-names = ["x", "y", "dx", "dy", "p", "s", "fg", "bg", "n", "ui", "tx", "rx"]
format.max-line-length = 120
"messages control".disable = ["consider-using-f-string", "duplicate-code", "wrong-import-order"]
spelling.spelling-dict = "en_US"
spelling.spelling-private-dict-file = "docs/source/spelling_wordlist.txt"

[tool.codespell]
ignore-words = "docs/source/spelling_wordlist.txt"

[tool.ruff]
# Sync with requires-python
target-version = "py37"
line-length = 100
output-format = "full"
src = ["nvitop", "nvitop-exporter/nvitop_exporter"]

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
    "S",       # flake8-bandit
    "BLE",     # flake8-blind-except
    "B",       # flake8-bugbear
    "COM",     # flake8-commas
    "C4",      # flake8-comprehensions
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "LOG",     # flake8-logging
    "ISC",     # flake8-implicit-str-concat
    "INP",     # flake8-no-pep420
    "PIE",     # flake8-pie
    "PYI",     # flake8-pyi
    "Q",       # flake8-quotes
    "RSE",     # flake8-raise
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TCH",     # flake8-type-checking
    "PERF",    # perflint
    "FURB",    # refurb
    "TRY",     # tryceratops
    "RUF",     # ruff
]
ignore = [
    # E501: line too long
    # W505: doc line too long
    # too long docstring due to long example blocks
    "E501",
    "W505",
    # ANN401: dynamically typed expressions (typing.Any) are disallowed
    "ANN401",
    # S101: use of `assert` detected
    # internal use and may never raise at runtime
    "S101",
    # SIM105: use `contextlib.suppress(...)` instead of try-except-pass
    # reduce unnecessary function call
    "SIM105",
    # TRY003: avoid specifying long messages outside the exception class
    # long messages are necessary for clarity
    "TRY003",
    # RUF022: `__all__` is not ordered according to an "isort-style" sort
    # `__all__` contains comments to group names
    "RUF022",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # unused-import
]
"setup.py" = [
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
]
"nvitop/api/lib*.py" = [
    "N",       # pep8-naming
]
"nvitop/callbacks/*.py" = [
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
]
"nvitop/gui/**/*.py" = [
    "D",       # pydocstyle
    "ANN",     # flake8-annotations
    "RUF012",  # mutable-class-default
]
"docs/source/conf.py" = [
    "D",       # pydocstyle
    "INP001",  # flake8-no-pep420
]

[tool.ruff.lint.isort]
known-first-party = ["nvitop", "nvitop_exporter"]
known-local-folder = ["nvitop", "nvitop-exporter"]
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
