[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files =
    LICENSE

url = https://github.com/XuehaiPan/nvitop
project_urls =
    Bug Reports = https://github.com/XuehaiPan/nvitop/issues
    Source = https://github.com/XuehaiPan/nvitop

keywords = nvidia, nvidia-smi, NVIDIA, NVML, CUDA, GPU, top, monitoring
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Environment :: Console
    Environment :: Console :: Curses
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Topic :: System :: Hardware
    Topic :: System :: Monitoring
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
packages = find:
install_requires =
    nvidia-ml-py >= 11.450.51, < 11.500.00
    psutil >= 5.6.6
    cachetools >= 1.0.1
    termcolor >= 1.0.0
    colorama >= 0.4.0; platform_system == "Windows"
    windows-curses >= 2.2.0; platform_system == "Windows"
python_requires = >= 3.5

[options.packages.find]
include =
    nvitop
    nvitop.*

[options.entry_points]
console_scripts =
    nvitop = nvitop.cli:main
