[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nvitop-exporter"
description = "Prometheus exporter built on top of `nvitop`."
readme = "README.md"
requires-python = ">= 3.7"
authors = [{ name = "Xuehai Pan", email = "XuehaiPan@pku.edu.cn" }]
license = { text = "Apache License, Version 2.0 (Apache-2.0)" }
keywords = [
    "nvidia",
    "nvidia-smi",
    "NVIDIA",
    "NVML",
    "CUDA",
    "GPU",
    "top",
    "monitoring",
    "prometheus",
    "Prometheus",
    "grafana",
    "Grafana",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    # Sync with nvitop/version.py and requirements.txt
    "nvitop == 1.3.0",
    "prometheus-client >= 0.4.0",
]
dynamic = ["version"]

[project.scripts]
nvitop-exporter = "nvitop_exporter.cli:main"

[project.urls]
Homepage = "https://github.com/XuehaiPan/nvitop"
Repository = "https://github.com/XuehaiPan/nvitop"
Documentation = "https://nvitop.readthedocs.io"
"Bug Report" = "https://github.com/XuehaiPan/nvitop/issues"

[tool.setuptools.packages.find]
include = ["nvitop_exporter", "nvitop_exporter.*"]

[tool.black]
safe = true
line-length = 100
skip-string-normalization = true
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.isort]
atomic = true
profile = "black"
src_paths = ["nvitop_exporter"]
known_first_party = ["nvitop", "nvitop_exporter"]
indent = 4
line_length = 100
lines_after_imports = 2
multi_line_output = 3

[tool.ruff]
extend = "../pyproject.toml"
